--- a/SQL game build01/Assets/Tests/PlayMode/PlayModeTests.asmdef
+++ b/SQL game build01/Assets/Tests/PlayMode/PlayModeTests.asmdef
@@ -3,7 +3,9 @@
     "rootNamespace": "",
     "references": [
         "UnityEngine.TestRunner",
-        "UnityEditor.TestRunner"
+        "UnityEditor.TestRunner",
+        "Main",
+        "SQL"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
