Make puzzleMaster can validate dbPath and anQuery after start game

--- a/SQL game build01/Assets/Scripts/Puzzle/PuzzleScript.asmdef
+++ b/SQL game build01/Assets/Scripts/Puzzle/PuzzleScript.asmdef
@@ -1,3 +1,16 @@
 {
-	"name": "PuzzleScript"
+    "name": "PuzzleScript",
+    "rootNamespace": "",
+    "references": [
+        "SQL"
+    ],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
