make unit test for puzzleMaster class

--- a/SQL game build01/Assets/Tests/PlayMode/PlayModeTests.asmdef
+++ b/SQL game build01/Assets/Tests/PlayMode/PlayModeTests.asmdef
@@ -5,7 +5,8 @@
         "UnityEngine.TestRunner",
         "UnityEditor.TestRunner",
         "Main",
-        "SQL"
+        "SQL",
+        "PuzzleScript"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
