Pl-interaction and misc edition

--- a/SQL game build01/Assets/Scripts/Player Scripts/PlayerScr.asmdef
+++ b/SQL game build01/Assets/Scripts/Player Scripts/PlayerScr.asmdef
@@ -1,7 +1,10 @@
 {
     "name": "PlayerScr",
     "rootNamespace": "",
-    "references": [],
+    "references": [
+        "GUID:0256afb586c91ee4ca6b944d0a01c319",
+        "GUID:a4e937a1500a5d5499cdd54f3cbe164d"
+    ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
