Border zone room travel implemented

--- a/SQL game build01/Assets/Scripts/Player Scripts/PlayerScr.asmdef
+++ b/SQL game build01/Assets/Scripts/Player Scripts/PlayerScr.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "",
     "references": [
         "GUID:0256afb586c91ee4ca6b944d0a01c319",
-        "GUID:a4e937a1500a5d5499cdd54f3cbe164d"
+        "GUID:a4e937a1500a5d5499cdd54f3cbe164d",
+        "GUID:98ed8d991693cff4c8cc040757f83e57"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
