--- a/SQL game build01/Assets/Scripts/Console Scripts/Consoles.asmdef
+++ b/SQL game build01/Assets/Scripts/Console Scripts/Consoles.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "",
     "references": [
         "GUID:6546d7765b4165b40850b3667f981c26",
-        "GUID:6055be8ebefd69e48b49212b09b47b2f"
+        "GUID:6055be8ebefd69e48b49212b09b47b2f",
+        "GUID:c25a42914548cba4dafd3ecdf60b1198"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
